# AutonomousTrader

./: .env.example  .gitignore  README.md  SETUP-LEARNING.md  dry_run_output.txt  form4_debug.xml  pyproject.toml
data/: sp500_constituents.csv
scripts/: debug_form4.py  debug_senate_listing.py  debug_sentiment_truncation.py  dry_run.py  inspect_last_cycle.py  refresh_sp500_universe.py  review_approvals.py  setup_notifier_applet.sh
scripts/launchd/: README.md  com.ryan.autonomous-trader.nightly.plist  com.ryan.autonomous-trader.run-cycle.plist  diagnose.sh  run_cycle.sh  run_nightly.sh
src/: config.py  db.py  discovery.py  llm_metering.py  main.py  mcp_bridge.py  newsletter.py  nightly.py  notify.py  universe.py
src/agents/: execution.py  portfolio_manager.py
src/memory/: recall.py  reflection.py  vault.py
src/risk/: churn_guard.py  market_data.py  regime.py  safety_rails.py  scorer.py  sizing.py
src/signals/: congressional.py  fundamentals.py  momentum.py  (+3 more)
supabase/: schema.sql
tests/: conftest.py  test_blend_and_prompt_memory.py  test_churn_guard.py  test_congressional.py  test_discovery.py  test_execution.py  test_full_market_universe.py  test_fundamentals.py  test_insider_edgar.py  test_llm_metering.py  test_main.py  test_market_data.py  test_momentum.py  test_news_sentiment.py  test_newsletter.py  test_notify.py  test_portfolio_manager.py  test_recall.py  test_reflection.py  test_review_approvals.py  test_safety_rails.py  test_scorer.py  test_sizing.py  test_thesis_targets.py  test_universe.py  test_vault.py  test_weight_tuner.py
vault/: README.md
(+15 files in other folders)
