[project]
name = "autonomous-trader"
version = "0.1.0"
description = "Autonomous paper-trading system: momentum + public-investment-movement signals, deterministic risk scoring, human-approval gate for high-risk trades."
requires-python = ">=3.11"
dependencies = [
    "supabase>=2.0.0",
    "alpaca-py>=0.20.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "anthropic>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
